syntax="proto3";
package pb;
option go_package="github.com/dalinaum/grpc-server/pb";

message EmptyRequestMessage{
}