syntax="proto3";
package pb;
import "rpc_signup.proto";
import "rpc_login.proto";
import "rpc_get_user.proto";
import "rpc_notifications.proto";
import "empty_request.proto";
import "rpc_users.proto";
import "rpc_chat.proto";

option go_package="github.com/dalinaum/grpc-server/pb";

service GrpcServerService {
    rpc SignUp(SignupRequestMessage) returns (SignupResponseMessage) {}
    rpc Login(LoginRequestMessage) returns (LoginResponseMessage) {}
    rpc GetUser(EmptyRequestMessage) returns (GetUserResponse) {}
    rpc GetNotifications(EmptyRequestMessage) returns (stream NotificationMessage) {}
    rpc GetUsers(UsersListRequest) returns (ListUserMessage) {}
    rpc SendMessage(stream SendMessageRequest) returns (stream Message){}
    rpc GetAllMessage(GetAllMessageRequest) returns (GetAllMessageResponse){}
}